--- a/public/translations/hi.json
+++ b/public/translations/hi.json
@@ -2,7 +2,7 @@
   "balance": "बैलेंस",
   "deposit_instant_cash": "डिपॉज़िट + इंस्टंट कैश",
   "withdrawal_balance": "विथड्रॉवल बैलेंस",
-  "cash": "प्रैक्टिस",
+  "wallet.remote.addcash.label": "प्रैक्टिस",
   "practice": "प्रैक्टिस",
   "tournaments": "टूर्नामेंट्स",
   "challenger": "चैलेंजर <Win 10.4 Cr>",
